# shapemodeling

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  report.md
data/face_template/: template.txt
data/landmarks_example/: test.txt
data/pca/small/default/: params
learning/: Demo.ipynb  config.py  decode.py  encode.py  model.pt  model_high_res.pt  model_large.pt  to_cpu.py  train.py
learning/.ipynb_checkpoints/: Demo-checkpoint.ipynb
learning/data/: __init__.py  face_dataset.py  load_obj.py  obj_utils.py
learning/model/: __init__.py  autoencoder.py  fully_connected.py  point_net_autoencoder.py  reshape.py
src/: PCA.cpp  PCA.h  common.cpp  common.h  face_alignment.cpp  face_alignment.h  landmark.cpp  landmark.h  learning.cpp  learning.h  main.cpp  pca.cpp  pca.h  pca_class.cpp  pca_class.h  pca_manager.cpp  pca_manager.h  rigid_registration.cpp  rigid_registration.h  warping.cpp  warping.h
test/: generate_faces.cpp  generate_warped_meshes.cpp  landmark_main.cpp  pca_main.cpp  pipeline.cpp  rigid_align_main.cpp  train_main.cpp  warping_main.cpp
